chore: fix spacing of notification badge

--- a/sass/components/_dialog.scss
+++ b/sass/components/_dialog.scss
@@ -308,7 +308,7 @@
                                     height: 19px;
                                     border-radius: 10px;
                                     top: 12px;
-                                    right: 35px;
+                                    left: 78%;
                                     font-size: 12px;
                                 }
                             }
